--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[official]{eurosym}
 \usepackage{hyperref}
+\usepackage{verbatim}
 
 %opening
 \title{Développement d’un module Netfilter de filtrage applicatif}
