--- a/trunk/presentation/presentation.tex
+++ b/trunk/presentation/presentation.tex
@@ -10,9 +10,9 @@
 
 \author[\textsc{Jacob, Whitbeck, Zanotti}]{Stéphane \textsc{Jacob}\\John \textsc{Whitbeck}\\Vincent \textsc{Zanotti}}
 
-\institute[INFRES]{
-  INFRES 358\\
-  Télécom Paris
+\institute[INF]{
+  INF 358\\
+  TÉLÉCOM ParisTech
  }
 
 \date[05/2008]{mai 2008}
