--- a/trunk/report/rapport.tex
+++ b/trunk/report/rapport.tex
@@ -7,7 +7,7 @@
 \usepackage{verbatim}
 
 %opening
-\title{Développement d’un module Netfilter de filtrage applicatif}
+\title{Développement d’un module Netfilter de filtrage applicatif\\INF 358}
 \author{Stéphane \textsc{Jacob} - John \textsc{Whitbeck} - Vincent \textsc{Zanotti}}
 \date{15 mai 2008}
 
@@ -18,8 +18,12 @@
 \section*{Introduction}
 \input{intro.tex}
 
-\section{But}
+\section{Présentation du projet}
 \input{but.tex}
+\newpage
+
+\section{Fonctionnement de Netfilter et possibilités offertes}
+\input{netfilter.tex}
 \newpage
 
 \section{Implémentation}
@@ -29,7 +33,6 @@
 \input{concl.tex}
 
 \nocite{RW}
-\nocite{l7}
 \nocite{C}
 \nocite{S}
 
