--- a/trunk/report/rapport.tex
+++ b/trunk/report/rapport.tex
@@ -5,6 +5,7 @@
 \usepackage[official]{eurosym}
 \usepackage{hyperref}
 \usepackage{verbatim}
+\usepackage{graphicx}
 
 %opening
 \title{Développement d’un module Netfilter de filtrage applicatif\\INF 358}
