Improves the Makefile for the report generation. Fixes image inclusion path issue in report/implementation.tex.

--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -20,7 +20,7 @@ la suppression des vieilles entrées).
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth]{schema2.png}\\
+\includegraphics[width=\textwidth]{report/schema2.png}\\
 \title{Fonctionnement du module}
 \end{figure}
 
