--- a/trunk/report/implementation.tex
+++ b/trunk/report/implementation.tex
@@ -20,7 +20,7 @@ la suppression des vieilles entrées).
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=\textwidth]{schema2.png}\\
+\includegraphics[width=\textwidth]{report/schema2.png}\\
 \title{Fonctionnement du module}
 \end{figure}
 
