Improves the Makefile for report & presentation.

--- a/presentation/beamerthemelmac.sty
+++ b/presentation/beamerthemelmac.sty
@@ -51,8 +51,8 @@
 \newlength\logoHeightUtc
 \logoHeightLmac = 6ex
 \logoHeightUtc  = 5ex
-\pgfdeclareimage[height=\logoHeightLmac,interpolate=true]{LMAC}{presentation/pictures/telecomparis}
-\pgfdeclareimage[height=\logoHeightUtc,interpolate=true]{UTC}{presentation/pictures/binaire}
+\pgfdeclareimage[height=\logoHeightLmac,interpolate=true]{LMAC}{pictures/telecomparis}
+\pgfdeclareimage[height=\logoHeightUtc,interpolate=true]{UTC}{pictures/binaire}
 
 % PERSONNALISATION DE LA BARRE DE NAVIGUATION (plus 'legere')
 \setbeamertemplate{navigation symbols}{
